updateing page titles adding projects and changinng intro

--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Melinda's website</title>
+    <title>Melinda's projects</title>
     <link rel="icon" href="assets/images/favicon.ico">
 </head>
 
@@ -80,6 +80,34 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
+                            <a href="https://github.com/jnsmelinda/Work-Day-Scheduler">
+                                <div class="card">
+                                    <h1>Work Day Scheduler</h1>
+                                    <img class="card-img-top" src="assets/images/scheduler.png" alt="Work-Day-Scheduler">
+                                    <div class="card-body">
+                                        <p class="card-text">This calendar application allows the user to save events for each business hour of the day. When clicking into a timeblock the user can enter an event.
+                                        </p>
+                                        <a href="https://jnsmelinda.github.io/Work-Day-Scheduler/">Check it out</a>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="col-sm-4">
+                            <a href="https://github.com/jnsmelinda/Code-Quiz">
+                                <div class="card">
+                                    <h1>Code-quiz</h1>
+                                    <img class="card-img-top" src="assets/images/start.png" alt="Code-Quiz">
+                                    <div class="card-body">
+                                        <p class="card-text">This application prepares you for JavaScript interviews. You have 2 minutes to answer 10 questions. Every wron answear costs 10 seconds. When all questions are answered or the timer reaches 0 the game is over, your score is presented and you can save your name and score.
+                                        </p>
+                                        <a href="https://jnsmelinda.github.io/Code-Quiz">Check it out</a>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/conference-application">
                                 <div class="card">
                                     <h1>Conference registry</h1>
@@ -87,6 +115,32 @@
                                     <div class="card-body">
                                         <p class="card-text">Applicant registry webservice using Spring Boot, Spring MVC,
                                             JSP or Thymeleaf and HTML.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <a href="https://github.com/jnsmelinda/Recipe-book">
+                                <div class="card">
+                                    <h1>Recipe book</h1>
+                                    <img class="card-img-top" src="assets/images/recipe-book-free-clipart-recipe-clip-art-300_300.jpg" alt="Recipe-book">
+                                    <div class="card-body">
+                                        <p class="card-text">REST based CRUDS webservice using Spring Data REST (Spring
+                                            Boot, Spring MVC, Spring Data, JPA).</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/Huffman">
+                                <div class="card">
+                                    <h1>Huffmann coding</h1>
+                                    <img class="card-img-top" src="assets/images/binary-tree.png" alt="Huffman">
+                                    <div class="card-body">
+                                        <p class="card-text">The application compresses and decompresses text files by using
+                                            Huffman Coding based on the frequency of the characters.</p>
                                     </div>
                                 </div>
                             </a>
@@ -108,32 +162,8 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/Recipe-book">
-                                <div class="card">
-                                    <h1>Recipe book</h1>
-                                    <img class="card-img-top" src="assets/images/recipe-book-free-clipart-recipe-clip-art-300_300.jpg" alt="Recipe-book">
-                                    <div class="card-body">
-                                        <p class="card-text">REST based CRUDS webservice using Spring Data REST (Spring
-                                            Boot, Spring MVC, Spring Data, JPA).</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/Huffman">
-                                <div class="card">
-                                    <h1>Huffmann coding</h1>
-                                    <img class="card-img-top" src="assets/images/binary-tree.png" alt="Huffman">
-                                    <div class="card-body">
-                                        <p class="card-text">The application compresses and decompresses text files by using
-                                            Huffman Coding based on the frequency of the characters.</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
                         <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/GuitarHero">
                                 <div class="card">
@@ -162,8 +192,6 @@
                                 </div>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
                         <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AnagramSolver">
                                 <div class="card">
@@ -173,6 +201,36 @@
                                         <p class="card-text">The application creates anagrams using recursive backtracking
                                             over dictionary to find all combinations of words that have the same letters as
                                             a given phrase.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AssassinManager">
+                                <div class="card">
+                                    <h1>Assassin manager</h1>
+                                    <img class="card-img-top" src="assets/images/LinkedList-in-Java.png" alt="assassination">
+                                    <div class="card-body">
+                                        <p class="card-text">Assassin manager keeps track of who is stalking whom and the
+                                            history of who killed whom. This Java program starts with a circular chain of
+                                            assassination targets what is linked list, called the “kill ring”.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/DNAAnalyzer">
+                                <div class="card">
+                                    <h1>DNA Analyzer</h1>
+                                    <img class="card-img-top" src="assets/images/dna.webp" alt="DNAAnalyzer">
+                                    <div class="card-body">
+                                        <p class="card-text">This DNA analyzing application that reads data from
+                                            the National Center for Biotechnology Information and provides statistics about
+                                            nucleotides and predicts whether or not the sequence is a protein-coding gene.</p>
                                     </div>
                                 </div>
                             </a>
@@ -187,34 +245,6 @@
                                             jungle. Each species move and behave in different ways in the 2D environment.
                                             They meet, feed, move, sleep and
                                             kill each other until only one kind of animal will rule the jungle.</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AssassinManager">
-                                <div class="card">
-                                    <h1>Assassin manager</h1>
-                                    <img class="card-img-top" src="assets/images/LinkedList-in-Java.png" alt="assassination">
-                                    <div class="card-body">
-                                        <p class="card-text">Assassin manager keeps track of who is stalking whom and the
-                                            history of who killed whom. This Java program starts with a circular chain of
-                                            assassination targets what is linked list, called the “kill ring”.</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/DNAAnalyzer">
-                                <div class="card">
-                                    <h1>DNA Analyzer</h1>
-                                    <img class="card-img-top" src="assets/images/dna.webp" alt="DNAAnalyzer">
-                                    <div class="card-body">
-                                        <p class="card-text">This DNA analyzing application that reads data from
-                                            the National Center for Biotechnology Information and provides statistics about
-                                            nucleotides and predicts whether or not the sequence is a protein-coding gene.</p>
                                     </div>
                                 </div>
                             </a>
