--- a/index.html
+++ b/index.html
@@ -33,15 +33,8 @@
                         <div class="col-sm-6">
                             <h1 class="display-4">Hi there!</h1>
                             <p class="lead">My name is Melinda Ivanov, nice to meet you.</p>
-                                <p>I am a technical-minded full-stack software engineer holding MSc degree in earth
-                                    sciences. My
-                                    experience includes taking major responsibility in academic projects in different
-                                    geospatial modeling and simulation and knowledge in server- and client-side
-                                    technology following quality code principles. My goal is to join a company where I
-                                    have the opportunity to develop user-friendly applications while utilizing both my
-                                    engineering and science qualifications. I have fast learning ability and
-                                    enthusiastic interest in innovative
-                                    techniques.</p>
+                                <p>I am a technical-minded developer leveraging an MSc degree in earth sciences from University of Szeged while currently working towards a full-stack web development certificate at University of Washington. My experience includes taking responsibilities in design, technical, and development decisions in academic projects using newly developed skills in Java backend and JavaScript full stack. As a passionate problem solver, my aim is to deliver quality products by applying clean design/coding principles and following agile methodologies. I enjoy creating user-friendly applications while utilizing both my engineering and science qualifications. I am a fast learner who is enthusiastic about innovative techniques and excited to leverage my skills as part of a fast-paced, quality-driven team.</p>
+
                         </div>
                         <div class="col-sm-6">
                             <img src="assets/images/profile.jpg" alt="Profile" class="center">
