adding grammar project

--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,6 @@
                                 </div>
                             </a>
                         </div>
-
                         <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/Weather-Dashboard">
                                 <div class="card">
@@ -92,7 +91,6 @@
                                 </div>
                             </a>
                         </div>
-
                         <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/Code-Quiz">
                                 <div class="card">
@@ -106,7 +104,6 @@
                                 </div>
                             </a>
                         </div>
-
                         <div class="col-sm-4">
                             <a href="https://github.com/jnsmelinda/conference-application">
                                 <div class="card">
@@ -127,8 +124,7 @@
                                     <h1>Recipe book</h1>
                                     <img class="card-img-top" src="assets/images/recipe-book-free-clipart-recipe-clip-art-300_300.jpg" alt="Recipe-book">
                                     <div class="card-body">
-                                        <p class="card-text">REST based CRUDS webservice using Spring Data REST (Spring
-                                            Boot, Spring MVC, Spring Data, JPA).</p>
+                                        <p class="card-text">REST based CRUDS webservice using Spring Data REST (Spring Boot, Spring MVC, Spring Data, JPA).</p>
                                     </div>
                                 </div>
                             </a>
@@ -139,8 +135,7 @@
                                     <h1>Huffmann coding</h1>
                                     <img class="card-img-top" src="assets/images/binary-tree.png" alt="Huffman">
                                     <div class="card-body">
-                                        <p class="card-text">The application compresses and decompresses text files by using
-                                            Huffman Coding based on the frequency of the characters.</p>
+                                        <p class="card-text">The application compresses and decompresses text files by using Huffman Coding based on the frequency of the characters.</p>
                                     </div>
                                 </div>
                             </a>
@@ -151,13 +146,7 @@
                                     <h1>Hangman</h1>
                                     <img class="card-img-top" src="assets/images/hangman.png" alt="hangman">
                                     <div class="card-body">
-                                        <p class="card-text">Evil hangman application which manages and
-                                            modifies the state of the game on-the-fly and it tries to trick the user. It
-                                            starts the game with a
-                                            set of words instead of one word and reduces the set to the words what are less
-                                            likely to be
-                                            discovered after each guess, until the player looses or only one word is in the
-                                            set.</p>
+                                        <p class="card-text">Evil hangman application which manages and modifies the state of the game on-the-fly and it tries to trick the user. It starts the game with a set of words instead of one word and reduces the set to the words what are less likely to be discovered after each guess, until the player looses or only one word is in the set.</p>
                                     </div>
                                 </div>
                             </a>
@@ -170,10 +159,7 @@
                                     <h1>Guitar Hero</h1>
                                     <img class="card-img-top" src="assets/images/guitar.jpeg" alt="guitarhero">
                                     <div class="card-body">
-                                        <p class="card-text">Guitar simulator that allows the user to play on a guitar by
-                                            using the keyboard of the computer ("keytar"). The application constructs notes
-                                            on the chromatic scale and the client can play these notes by pressing different
-                                            keys on the keyboard.</p>
+                                        <p class="card-text">Guitar simulator that allows the user to play on a guitar by using the keyboard of the computer ("keytar"). The application constructs notes on the chromatic scale and the client can play these notes by pressing different keys on the keyboard.</p>
                                     </div>
                                 </div>
                             </a>
@@ -185,9 +171,7 @@
                                     <img class="card-img-top" src="assets/images/tree.jpeg" alt="20Questions">
                                     <div class="card-body">
                                         <p class="card-text">Yes-no question game in which the player thinks
-                                            of an object and the computer tries to guess it by asking yes-no questions. The
-                                            computer becomes smarter after each failed round and learns the new question-answer pair to win
-                                            more future games.</p>
+                                            of an object and the computer tries to guess it by asking yes-no questions. The computer becomes smarter after each failed round and learns the new question-answer pair to win more future games.</p>
                                     </div>
                                 </div>
                             </a>
@@ -198,26 +182,20 @@
                                     <h1>Anagram solver</h1>
                                     <img class="card-img-top" src="assets/images/fractal3.png" alt="anagram">
                                     <div class="card-body">
-                                        <p class="card-text">The application creates anagrams using recursive backtracking
-                                            over dictionary to find all combinations of words that have the same letters as
-                                            a given phrase.</p>
+                                        <p class="card-text">The application creates anagrams using recursive backtracking over dictionary to find all combinations of words that have the same letters as a given phrase.</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
-
-
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AssassinManager">
+                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/GrammarSolver">
                                 <div class="card">
-                                    <h1>Assassin manager</h1>
-                                    <img class="card-img-top" src="assets/images/LinkedList-in-Java.png" alt="assassination">
+                                    <h1>Grammar solver</h1>
+                                    <img class="card-img-top" src="assets/images/the-big-dog-hit-the-big-dog.png" alt="Grammar">
                                     <div class="card-body">
-                                        <p class="card-text">Assassin manager keeps track of who is stalking whom and the
-                                            history of who killed whom. This Java program starts with a circular chain of
-                                            assassination targets what is linked list, called the “kill ring”.</p>
+                                        <p class="card-text">This program reads an input file with a grammar in Backus-Naur Form (BNF) and allows the user to randomly generate elements of the grammar. - Java, OOP, Collections API, Recursion, regex, Generics</p>
                                     </div>
                                 </div>
                             </a>
@@ -229,8 +207,7 @@
                                     <img class="card-img-top" src="assets/images/dna.webp" alt="DNAAnalyzer">
                                     <div class="card-body">
                                         <p class="card-text">This DNA analyzing application that reads data from
-                                            the National Center for Biotechnology Information and provides statistics about
-                                            nucleotides and predicts whether or not the sequence is a protein-coding gene.</p>
+                                            the National Center for Biotechnology Information and provides statistics about nucleotides and predicts whether or not the sequence is a protein-coding gene.</p>
                                     </div>
                                 </div>
                             </a>
@@ -242,9 +219,20 @@
                                     <img class="card-img-top" src="assets/images/husky.jpg" alt="junglegame">
                                     <div class="card-body">
                                         <p class="card-text">Game/simulation with animals in it like a
-                                            jungle. Each species move and behave in different ways in the 2D environment.
-                                            They meet, feed, move, sleep and
-                                            kill each other until only one kind of animal will rule the jungle.</p>
+                                            jungle. Each species move and behave in different ways in the 2D environment. They meet, feed, move, sleep and kill each other until only one kind of animal will rule the jungle.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AssassinManager">
+                                <div class="card">
+                                    <h1>Assassin manager</h1>
+                                    <img class="card-img-top" src="assets/images/LinkedList-in-Java.png" alt="assassination">
+                                    <div class="card-body">
+                                        <p class="card-text">Assassin manager keeps track of who is stalking whom and the history of who killed whom. This Java program starts with a circular chain of assassination targets what is linked list, called the “kill ring”.</p>
                                     </div>
                                 </div>
                             </a>
