designing consistent styling

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                 <div class="container">
                     <div class="row">
                         <div class='col-sm-6'>
-                            <h1 class="display-4">Let's connect!</h1>
+                            <h1 class="display-4" id="greeting">Let's connect!</h1>
                             <a href="https://www.linkedin.com/in/melinda-ivanov/"> <img alt="Linkedin"
                                     src="assets/images/LI-In-Bug.png" class="linkedin"></a>
                         </div>
