updating style of contact

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Melinda's website</title>
     <link rel="icon" href="assets/images/favicon.ico">
 </head>
@@ -29,16 +30,32 @@
         <section>
             <div class="jumbotron jumbotron-fluid">
                 <div class="container">
-                    <div class="row">
+                    <div class="row" id="intro">
                         <div class="col-sm-7">
                             <h1 class="display-4" id="greeting">Hi there!</h1>
                             <p class="lead">My name is <strong>Melinda Ivanov</strong>, nice to meet you.</p>
-                                <p>I am a technical-minded developer leveraging an MSc degree in earth sciences from University of Szeged while currently working towards a full-stack web development certificate at University of Washington. My experience includes taking responsibilities in design, technical, and development decisions in academic projects using newly developed skills in Java backend and JavaScript full stack. As a passionate problem solver, my aim is to deliver quality products by applying clean design/coding principles and following agile methodologies. I enjoy creating user-friendly applications while utilizing both my engineering and science qualifications. I am a fast learner who is enthusiastic about innovative techniques and excited to leverage my skills as part of a fast-paced, quality-driven team.</p>
+                            <p>I am a technical-minded developer leveraging an MSc degree in earth sciences from
+                                University of Szeged while currently working towards a full-stack web development
+                                certificate at University of Washington. My experience includes taking responsibilities
+                                in design, technical, and development decisions in academic projects using newly
+                                developed skills in Java backend and JavaScript full stack. As a passionate problem
+                                solver, my aim is to deliver quality products by applying clean design/coding principles
+                                and following agile methodologies. I enjoy creating user-friendly applications while
+                                utilizing both my engineering and science qualifications. I am a fast learner who is
+                                enthusiastic about innovative techniques and excited to leverage my skills as part of a
+                                fast-paced, quality-driven team.</p>
 
                         </div>
                         <div class="col-sm-5">
                             <img src="assets/images/profile.jpg" alt="Profile" class="center" id="profileImg">
                         </div>
+                    </div>
+                    <div class="row">
+                        <h2 class="display-4" id="contact">Find me on:</h2>
+                    </div>
+                    <div class="row">
+                        <a href="https://www.linkedin.com/in/melinda-ivanov/" id="linkedinC" class="fa fa-linkedin fa-5x"></a>
+                        <a href="https://github.com/jnsmelinda" class="fa fa-github fa-5x" id="githubC"></a>
                     </div>
                 </div>
             </div>
