--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Melinda's contact</title>
     <link rel="icon" href="assets/images/favicon.ico">
@@ -32,8 +33,10 @@
                     <div class="row">
                         <div class='col-sm-6'>
                             <h1 class="display-4" id="greeting">Let's connect!</h1>
-                            <a href="https://www.linkedin.com/in/melinda-ivanov/"> <img alt="Linkedin"
-                                    src="assets/images/LI-In-Bug.png" class="linkedin"></a>
+                            <div class="row">
+                                <a href="https://www.linkedin.com/in/melinda-ivanov/" id="linkedinC" class="fa fa-linkedin fa-5x"></a>
+                                <a href="https://github.com/jnsmelinda" class="fa fa-github fa-5x" id="githubC"></a>
+                            </div>
                         </div>
                         <div class='col-sm-6'>
                             <form action="mailto:jns.melinda@gmail.com" method="GET" target="top">
