adding resume link toggle to links

--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
                         <div class='col-sm-6'>
                             <h1 class="display-4" id="greeting">Let's connect!</h1>
                             <div class="row">
-                                <a href="https://www.linkedin.com/in/melinda-ivanov/" id="linkedinC" class="fa fa-linkedin fa-5x"></a>
-                                <a href="https://github.com/jnsmelinda" class="fa fa-github fa-5x" id="githubC"></a>
+                                <a href="https://www.linkedin.com/in/melinda-ivanov/" id="linkedin" class="fa fa-linkedin fa-5x" data-toggle="tooltip" data-placement="right" title="Linkedin"></a>
+                                <a href="https://github.com/jnsmelinda" class="fa fa-github fa-5x" data-toggle="tooltip" data-placement="right" title="GitHub" id="github"></a>
                             </div>
                         </div>
                         <div class='col-sm-6'>
@@ -43,7 +43,6 @@
                                 <div class="form-group">
                                     <label for="email-subject">Subject</label>
                                     <input name="subject" class="form-control" id="email-subject" placeholder="Hi Melinda! Let's Connect">
-
                                     <label for="email-body">Message</label>
                                     <textarea name="body" class="form-control" id="email-body" rows="3"></textarea>
                                 </div>
