--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
                         </div>
                     </div>
                     <div class="row">
-                        <h2 class="display-4" id="contact">Find me on:</h2>
+                        <h2 class="display-4" id="contact">More about me:</h2>
                     </div>
                     <div class="row">
-                        <a href="https://www.linkedin.com/in/melinda-ivanov/" id="linkedinC" class="fa fa-linkedin fa-5x"></a>
-                        <a href="https://github.com/jnsmelinda" class="fa fa-github fa-5x" id="githubC"></a>
+                        <a href="https://www.linkedin.com/in/melinda-ivanov/" id="linkedin" class="fa fa-linkedin fa-5x" data-toggle="tooltip" data-placement="right" title="Linkedin"></a>
+                        <a href="https://github.com/jnsmelinda" class="fa fa-github fa-5x" data-toggle="tooltip" data-placement="right" title="GitHub" id="github"></a>
+                        <a href="assets/cv/resume.pdf" class="fa fa-file-pdf-o fa-5x" data-toggle="tooltip" data-placement="right" title="Resume" id="resume"></a>
                     </div>
                 </div>
             </div>
