--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                                     <label for="email-body">Message</label>
                                     <textarea name="body" class="form-control" id="email-body" rows="3"></textarea>
                                 </div>
-                                <button type="submit" class="btn btn-primary">Send</button>
+                                <button type="submit" class="btn btn-primary" id="sendButton">Send</button>
                             </form>
                         </div>
                     </div>
