adding tooltip to logo

--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav class="navbar navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="index.html" data-toggle="tooltip" data-placement="right" title="home">
                 <div class="logo">MI</div>
             </a>
             <ul>
