changing hover styling

--- a/projects.html
+++ b/projects.html
@@ -66,10 +66,8 @@
                                     <img class="card-img-top" src="assets/images/password.png" alt="Password-generator">
                                     <div class="card-body">
                                         <p class="card-text">The random password generator promts the user for the
-                                            password
-                                            length (8-128) and the strength of the password (lower case, upper case,
-                                            numerical,
-                                            special characters), then displays the generated password on the screen.
+                                            password length (8-128) and the strength of the password (lower case, upper case,
+                                            numerical, special characters), then displays the generated password on the screen.
                                         </p>
                                         <a href="https://jnsmelinda.github.io/Password-generator">Check it out</a>
                                     </div>
