--- a/projects.html
+++ b/projects.html
@@ -95,7 +95,7 @@
                                     <h1>Code-quiz</h1>
                                     <img class="card-img-top" src="assets/images/start.png" alt="Code-Quiz">
                                     <div class="card-body">
-                                        <p class="card-text">This application prepares you for JavaScript interviews. You have 2 minutes to answer 10 questions. Every wron answear costs 10 seconds. When all questions are answered or the timer reaches 0 the game is over, your score is presented and you can save your name and score.
+                                        <p class="card-text">This application prepares you for JavaScript interviews. You have 2 minutes to answer 10 questions. Every wrong answear costs 10 seconds. When all questions are answered or the timer reaches 0 the game is over, your score is presented and you can save your name and score.
                                         </p>
                                         <a href="https://jnsmelinda.github.io/Code-Quiz">Check it out</a>
                                     </div>
